Modified appointment back end model to have a timespan value. The front end now uses this value to display the length of an appointment visually on the Day grid. Still need to fix appointments overlapping.

--- a/client/src/components/day/Day.css
+++ b/client/src/components/day/Day.css
@@ -7,7 +7,16 @@
     height: 20px;
 }
 
+.appointment {
+    display: inline-block;
+    position: block;
+    width: 100px;
+    border: 1px solid navy;
+    background-color: lightskyblue;
+}
+
 .table-container {
     max-width: 400px;
     margin: auto;
+    overflow: scroll;
 }
